# archive_r

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  SECURITY.md  build-on-macos.sh  build-on-mingw.ps1  build-on-msvc.ps1  build-on-ubuntu.sh  build-wheel-macos.sh  build-wheel-manylinux.sh  build-wheel-msvc.ps1  build.sh  failed_arm64_hybrid_log.txt  failed_log_run.txt  failed_log_wheels.txt  failed_log_win_latest.txt  failed_log_win_prev.txt  failed_msvc_ci_log.txt  failed_msvc_ci_log_3.txt  failed_msvc_log.txt  failed_msvc_log_3.txt  failed_windows_container_build.txt  failed_windows_container_build_2.txt  failed_windows_container_build_3.txt  full_run_log.txt  install-deps-macos.sh  install-deps-mingw-container.ps1  install-deps-mingw.ps1  install-deps-msvc-container.ps1  install-deps-msvc.ps1  install-deps-ubuntu.sh  install-image-deps-mingw.ps1  install-image-deps-msvc.ps1  install-image-deps-ubuntu.sh  mingw_full_log.txt  mingw_job_log.txt  mingw_log.txt  (+9 more)
.github/: dependabot.yml
.github/containers/windows/: Dockerfile.pf6
.github/docker/: ci-linux-arm64-cross.Dockerfile  ci-linux-arm64.Dockerfile  ci-windows-mingw.Dockerfile  ci-windows-msvc.Dockerfile  manylinux-2-28-aarch64-deps.Dockerfile
.github/scripts/ci/: build_macos_deps.sh  build_manylinux_wheels.sh  run_with_timeout.py
.github/scripts/ci/windows/: run_platform_ci.ps1
.github/workflows/: build-ci-containers.yml  build-containers.yml  build-manylinux-aarch64-base.yml  build-wheel-containers.yml  build-wheels.yml  build-windows-containers.yml  ci-windows-platforms.yml  ci.yml  codeql.yml  coverage.yml  release.yml  scorecard.yml  sign-release-assets.yml  test-windows-containers.yml
bindings/python/: .gitignore  MANIFEST.in  README.md  run_binding_tests.sh  setup.cfg  setup.py
bindings/python/src/: archive_r_py.cc
bindings/python/test/: test_traverser.py
bindings/python/tools/: bootstrap_deps.sh  build-deps-macos.sh  build-deps-manylinux.sh  build-deps-msvc.ps1  build-wheel-macos.sh  build-wheel-manylinux.sh  build-wheel-msvc.ps1  requirements-wheel-macos.txt
bindings/ruby/: .gitignore  Gemfile  LICENSE  LICENSE.txt  README.md  Rakefile  archive_r.gemspec  debug_group.rb  debug_multi_volume.rb  run_binding_tests.sh
bindings/ruby/examples/: show_metadata_with_multivolume.rb  traverse_archive.rb
bindings/ruby/ext/archive_r/: archive_r_ext.cc  extconf.rb
bindings/ruby/lib/: archive_r.rb
bindings/ruby/test/: test_traverser.rb
ci/windows/: run_platform_ci.ps1
containers/windows/: Dockerfile.pf5  Dockerfile.pf6
draft_docs/: manylinux_matrix_build.sh  temp_release_event.json
examples/: find_and_traverse.cc
include/archive_r/: data_stream.h  entry.h  entry_metadata.h  path_hierarchy.h  platform_compat.h  traverser.h
scripts/ci/: build_manylinux_wheels.sh
src/: archive_stack_cursor.cc  archive_stack_cursor.h  archive_stack_orchestrator.cc  archive_stack_orchestrator.h  archive_type.cc  archive_type.h  entry.cc  entry_impl.h  multi_volume_stream_base.cc  path_hierarchy.cc  path_hierarchy_utils.cc  simple_profiler.h  system_file_stream.cc  system_file_stream.h  traverser.cc
temp_logs/archive-r-PF3-a04772e52bc5ac0291c564892f0fa56b3f93b3ca/bindings/ruby/: archive_r_ruby-0.1.1.gem
temp_logs/archive-r-PF4-a04772e52bc5ac0291c564892f0fa56b3f93b3ca/bindings/ruby/: archive_r_ruby-0.1.1.gem
temp_logs/archive-r-pf1-a04772e52bc5ac0291c564892f0fa56b3f93b3ca/bindings/ruby/: archive_r_ruby-0.1.1.gem
temp_logs/archive-r-pf6-a04772e52bc5ac0291c564892f0fa56b3f93b3ca/bindings/ruby/: archive_r_ruby-0.1.1.gem
test/: entry_read_helpers.h  generate_test_data.py  multipart_utils.h  test_archive_current_entry_metadata.cc  test_archive_entry_metadata_branches.cc  test_archive_metadata_keys.cc  test_archive_stack_cursor.cc  test_archive_type_error_paths.cc  test_custom_root_stream.cc  test_data_source_reader_read.cc  test_data_stream_defaults.cc  test_descent.cc  test_directory_container.cc  test_directory_navigation.cc  test_entry_fault_paths.cc  test_entry_impl_copy_and_faults.cc  test_entry_name_and_copy.cc  test_entry_read.cc  test_error_handling_step0.cc  test_error_utilities_and_orchestrator_paths.cc  test_find_and_traverse.cc  test_iterator.cc  test_metadata_filesystem.cc  test_metadata_options.cc  test_multi_root_traversal.cc  test_multi_volume_debug.cc  test_multi_volume_entry_persistence.cc  test_multi_volume_functionality.cc  test_multi_volume_input.cc  test_multi_volume_iterator.cc  test_multi_volume_ordering.cc  test_multi_volume_retry.cc  test_multi_volume_stream_base_defaults.cc  test_multi_volume_traversal_regression.cc  test_nested_root_acceptance.cc  test_oom_operator_new.cc  test_orchestrator_multivolume_skip_to_eof.cc  test_path_hierarchy_utils.cc  test_performance_no_descend.cc  test_root_file_multi_volume.cc  (+15 more)
test_data/: archive.tar.gz.part001  archive.tar.part001  archive.tar.part002  broken_nested.tar  broken_nested_inner_corrupt.tar  create_stress_test.sh  create_test_data.py  data.txt.part001  data.txt.part002  data.txt.part003  format_ar_test.ar  format_cpio_test.cpio  level1.tar.part001  level1.tar.part007  multi_volume_missing_part.tar.part002  nested_multi_volume_input.tar.gz.part00  outer.txt  root.txt  stress_test_ultimate.tar.gz.part001  stress_test_ultimate.tar.gz.part002  stress_test_ultimate.tar.gz.part003  test_input.tar.gz.part00
test_data/specs/: core_archives.yaml  stress_test_ultimate.yaml
test_data/tools/: generate_archives.rb
tools/: fs_iter_order_probe.cc
